--- a/JavaSnake/.project
+++ b/JavaSnake/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SNAKE</name>
+	<name>JavaSnake</name>
 	<comment></comment>
 	<projects>
 	</projects>
